Duplicate %matplotlib notebook

--- a/widgets-comparison.ipynb
+++ b/widgets-comparison.ipynb
@@ -1053,6 +1053,8 @@
    ],
    "source": [
     "%matplotlib notebook\n",
+    "# Calling it a second time may prevent some graphics errors (from https://stackoverflow.com/a/43550882)\n",
+    "%matplotlib notebook\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.widgets import Slider\n",
